--- a/css/site.css
+++ b/css/site.css
@@ -1,5 +1,19 @@
+@import "./open-color.css";
+
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+}
+
+html {
+  font-size: 20px;
+  scroll-behavior: smooth;
+}
+
+body {
+  font-family: "Raleway", sans-serif;
+  font-weight: 400;
+  line-height: 1;
+  color: var(--oc-gray-8);
 }
