--- a/css/site.css
+++ b/css/site.css
@@ -50,7 +50,6 @@ body {
   text-decoration: none;
   color: var(--oc-gray-0);
   border-radius: 10rem;
-  border: 0.2rem solid transparent;
   background-color: var(--oc-indigo-8);
   box-shadow: 0 0.2rem 0.4rem var(--oc-indigo-9);
   transition: all 0.2s;
@@ -58,17 +57,19 @@ body {
 
 .cta-link:hover,
 .cta-link:active {
-  border: 0.2rem solid var(--oc-indigo-2);
   background-color: var(--oc-indigo-9);
+  box-shadow: 0 0.4rem 0.8rem var(--oc-indigo-9);
 }
 
 .cta-link.cta--med {
-  padding: 0.4rem 0.8rem;
+  padding: 0.6rem 1rem;
+  padding-left: 1.6rem;
   font-size: 1rem;
 }
 
 .cta-link.cta--big {
-  padding: 0.6rem 1.2rem;
+  padding: 0.8rem 1.2rem;
+  padding-left: 1.6rem;
   font-size: 1.6rem;
 }
 
@@ -170,6 +171,7 @@ h3 {
   padding: 1.2rem;
   font-size: 0.8rem;
   line-height: 1.6;
+  letter-spacing: 0.05rem;
   color: var(--oc-gray-0);
 }
 
@@ -311,9 +313,8 @@ h3 {
   display: inline-block;
   height: 4.4rem;
   width: 4.4rem;
-  padding: 0.8rem;
+  padding: 1rem;
   border-radius: 50%;
-  border: 0.2rem solid transparent;
   background-color: var(--oc-indigo-8);
   box-shadow: 0 0.2rem 0.4rem var(--oc-indigo-9);
   transition: all 0.2s;
@@ -321,8 +322,8 @@ h3 {
 
 .social-link:hover,
 .social-link:active {
-  border: 0.2rem solid var(--oc-indigo-2);
   background-color: var(--oc-indigo-9);
+  box-shadow: 0 0.4rem 0.8rem var(--oc-indigo-9);
 }
 
 .social-logo {
