--- a/css/site.css
+++ b/css/site.css
@@ -41,6 +41,7 @@ body {
 .cta-container {
   display: block;
   text-align: center;
+  padding: 1rem 0;
 }
 
 .cta-link:link,
@@ -170,7 +171,7 @@ h3 {
 .big-card-txt {
   padding: 1.2rem;
   font-size: 0.8rem;
-  line-height: 1.6;
+  line-height: 2;
   letter-spacing: 0.05rem;
   color: var(--oc-gray-0);
 }
