--- a/css/contact.css
+++ b/css/contact.css
@@ -23,14 +23,14 @@
   list-style: none;
   display: flex;
   justify-content: center;
-  gap: 2.4rem;
+  gap: 3.2rem;
 }
 
 .contact-link:link,
 .contact-link:visited {
   display: flex;
   align-items: center;
-  gap: 0.6rem;
+  gap: 1.2rem;
   padding: 0.8rem 1.2rem;
   text-decoration: none;
   border-radius: 10rem;
@@ -57,8 +57,7 @@
 }
 
 .contact-availability {
-  margin-bottom: 2.4rem;
-  padding: 1.2rem 0;
+  margin-top: 1.6rem;
   text-align: center;
   font-size: 0.8rem;
   font-style: italic;
