--- a/css/site.css
+++ b/css/site.css
@@ -226,6 +226,12 @@ h3 {
   border-radius: 50%;
 }
 
+.figure-icon-flag {
+  height: 3.2rem;
+  width: 3.2rem;
+  border-radius: 50%;
+}
+
 .figure-text {
   padding-bottom: 1rem;
   font-size: 0.8rem;
